--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "bundle:ios": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios"
   },
   "dependencies": {
+    "@types/numeral": "^0.0.25",
     "axios": "0.18.0",
     "babel-plugin-module-alias": "1.6.0",
     "lodash": "4.17.10",
     "node-libs-react-native": "1.0.2",
+    "numeral": "^2.0.6",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-device-info": "^0.22.4",
