--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-native-google-analytics-bridge": "^5.8.0",
     "react-native-svg": "^6.5.2",
     "react-native-svg-icon": "^0.8.1",
+    "react-redux": "^5.0.7",
     "react-router-native": "4.3.0",
     "react-router-native-stack": "^0.0.12",
-    "recompose": "0.28.2"
+    "recompose": "0.28.2",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -33,8 +35,10 @@
     "@types/numeral": "^0.0.25",
     "@types/react": "^16.4.10",
     "@types/react-native": "^0.56.8",
+    "@types/react-redux": "^6.0.6",
     "@types/react-router-native": "^4.2.3",
     "@types/recompose": "^0.26.4",
+    "@types/redux": "^3.6.0",
     "babel-jest": "23.4.2",
     "babel-preset-react-native": "^5",
     "jest": "23.5.0",
