--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-splash-screen')
     compile project(':react-native-svg')
     compile project(':react-native-device-info')
     compile project(':react-native-google-analytics-bridge')
