--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-native": "0.56.0",
         "react-native-device-info": "0.22.4",
         "react-native-google-analytics-bridge": "5.8.0",
+        "react-native-linear-gradient": "^2.4.2",
         "react-native-splash-screen": "3.1.1",
         "react-native-svg": "6.5.2",
         "react-native-svg-icon": "0.8.1",
