Add React Native Firebase

--- a/ios/KunaTicker.xcodeproj/xcshareddata/xcschemes/KunaTicker.xcscheme
+++ b/ios/KunaTicker.xcodeproj/xcshareddata/xcschemes/KunaTicker.xcscheme
@@ -99,6 +99,16 @@
             ReferencedContainer = "container:KunaTicker.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-FIRDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
