--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react": "16.4.1",
         "react-native": "0.56.0",
         "react-native-device-info": "0.22.4",
+        "react-native-firebase": "^5.0.0-rc4",
         "react-native-google-analytics-bridge": "5.8.0",
         "react-native-interactable": "^0.1.10",
         "react-native-splash-screen": "3.1.1",
