--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "KunaTicker",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start -- --reset-cache",
@@ -12,16 +12,15 @@
     },
     "dependencies": {
         "axios": "0.18.0",
-        "babel-plugin-module-alias": "1.6.0",
-        "kuna-sdk": "^0.3.0",
+        "kuna-sdk": "0.3.0",
         "lodash": "4.17.10",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
         "react": "16.4.1",
         "react-native": "0.56.0",
         "react-native-device-info": "0.22.4",
-        "react-native-firebase": "^5.0.0-rc4",
-        "react-native-interactable": "^0.1.10",
+        "react-native-firebase": "5.0.0-rc4",
+        "react-native-interactable": "0.1.10",
         "react-native-splash-screen": "3.1.1",
         "react-native-svg": "6.5.2",
         "react-native-svg-icon": "0.8.1",
@@ -30,27 +29,27 @@
         "react-redux": "5.0.7",
         "recompose": "0.28.2",
         "redux": "4.0.0",
-        "vm": "^0.1.0"
+        "vm": "0.1.0"
     },
     "devDependencies": {
-        "@types/axios": "^0.14.0",
-        "@types/es6-promise": "^3.3.0",
-        "@types/lodash": "^4.14.116",
-        "@types/numeral": "^0.0.25",
-        "@types/react": "^16.4.10",
-        "@types/react-native": "^0.56.8",
-        "@types/react-native-tab-view": "^1.0.2",
-        "@types/react-navigation": "^2.0.19",
-        "@types/react-redux": "^6.0.6",
-        "@types/recompose": "^0.26.4",
-        "@types/redux": "^3.6.0",
+        "@types/es6-promise": "3.3.0",
+        "@types/lodash": "4.14.116",
+        "@types/numeral": "0.0.25",
+        "@types/react": "16.4.11",
+        "@types/react-native": "0.56.9",
+        "@types/react-native-tab-view": "1.0.2",
+        "@types/react-navigation": "2.0.19",
+        "@types/react-redux": "6.0.6",
+        "@types/recompose": "0.26.4",
+        "@types/redux": "3.6.0",
         "babel-jest": "23.4.2",
-        "babel-preset-react-native": "^5",
+        "babel-plugin-module-alias": "1.6.0",
+        "babel-preset-react-native": "5.0.2",
         "jest": "23.5.0",
-        "react-native-typescript-transformer": "^1.2.10",
+        "react-native-typescript-transformer": "1.2.10",
         "react-test-renderer": "16.4.1",
-        "ts-jest": "^23.1.3",
-        "typescript": "^3.0.1"
+        "ts-jest": "23.1.3",
+        "typescript": "3.0.1"
     },
     "jest": {
         "preset": "react-native"
