--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,8 @@ target 'KunaTicker' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 
+  pod 'react-native-randombytes', :path => '../node_modules/react-native-randombytes'
+
   target 'KunaTickerTests' do
     inherit! :search_paths
     # Pods for testing
