--- a/package.json
+++ b/package.json
@@ -3,25 +3,31 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "start": "node node_modules/react-native/local-cli/cli.js start -- --reset-cache",
+        "start": "node node_modules/react-native/local-cli/cli.js start",
         "test": "jest",
-        "ios": "react-native run-ios",
-        "android": "react-native run-android",
+        "ios": "./node_modules/.bin/react-native run-ios",
+        "android": "./node_modules/.bin/react-native run-android",
         "bundle:ios": "react-native bundle --entry-file index.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios",
-        "third-party": "cd node_modules/react-native/third-party/glog-0.3.4 && ../../scripts/ios-configure-glog.sh"
+        "make-third-party:1": "cd ./node_modules/react-native/scripts && ./ios-install-third-party.sh",
+        "make-third-party:2": "cd ./node_modules/react-native/third-party/glog-0.3.5 && ./configure && make && make install",
+        "make-third-party": "npm run make-third-party:1 && npm run make-third-party:2",
+        "configure-app": "npm install && react-native link && npm run make-third-party"
     },
     "dependencies": {
         "axios": "0.18.0",
-        "kuna-sdk": "0.3.0",
+        "kuna-sdk": "0.3.2",
         "lodash": "4.17.10",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
         "react": "16.4.1",
-        "react-native": "0.56.0",
+        "react-native": "0.57.1",
+        "react-native-crypto": "2.1.2",
         "react-native-device-info": "0.22.4",
         "react-native-firebase": "5.0.0-rc4",
         "react-native-interactable": "0.1.10",
+        "react-native-randombytes": "3.5.1",
         "react-native-splash-screen": "3.1.1",
+        "react-native-super-grid": "2.4.3",
         "react-native-svg": "6.5.2",
         "react-native-svg-icon": "0.8.1",
         "react-native-tab-view": "1.0.2",
@@ -29,14 +35,14 @@
         "react-redux": "5.0.7",
         "recompose": "0.28.2",
         "redux": "4.0.0",
-        "vm": "0.1.0"
+        "vm-browserify": "1.1.0"
     },
     "devDependencies": {
         "@types/es6-promise": "3.3.0",
         "@types/lodash": "4.14.116",
         "@types/numeral": "0.0.25",
         "@types/react": "16.4.11",
-        "@types/react-native": "0.56.9",
+        "@types/react-native": "0.56.24",
         "@types/react-native-tab-view": "1.0.2",
         "@types/react-navigation": "2.0.19",
         "@types/react-redux": "6.0.6",
@@ -46,7 +52,6 @@
         "babel-plugin-module-alias": "1.6.0",
         "babel-preset-react-native": "5.0.2",
         "jest": "23.5.0",
-        "react-native-typescript-transformer": "1.2.10",
         "react-test-renderer": "16.4.1",
         "ts-jest": "23.1.3",
         "typescript": "3.0.1"
