--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
         "axios": "0.18.0",
         "kuna-sdk": "0.3.2",
         "lodash": "4.17.10",
-        "metro-react-native-babel-preset": "^0.47.0",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
         "react": "16.4.1",
-        "react-native": "^0.56.1",
+        "react-native": "0.56.1",
         "react-native-crypto": "2.1.2",
         "react-native-device-info": "0.22.4",
         "react-native-firebase": "5.0.0-rc4",
@@ -53,7 +52,8 @@
         "babel-plugin-module-alias": "1.6.0",
         "babel-preset-react-native": "5.0.2",
         "jest": "23.5.0",
-        "react-native-typescript-transformer": "^1.2.10",
+        "metro-react-native-babel-preset": "0.47.0",
+        "react-native-typescript-transformer": "1.2.10",
         "react-test-renderer": "16.4.1",
         "ts-jest": "23.1.3",
         "typescript": "3.0.1"
