--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     },
     "dependencies": {
         "axios": "0.18.0",
-        "kuna-sdk": "^0.3.5",
+        "kuna-sdk": "0.3.5",
         "lodash": "4.17.10",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
@@ -25,7 +25,7 @@
         "react-native-device-info": "0.22.4",
         "react-native-firebase": "5.0.0-rc4",
         "react-native-interactable": "0.1.10",
-        "react-native-markdown-renderer": "^3.2.8",
+        "react-native-markdown-renderer": "3.2.8",
         "react-native-randombytes": "3.5.1",
         "react-native-splash-screen": "3.1.1",
         "react-native-super-grid": "2.4.3",
