--- a/package.json
+++ b/package.json
@@ -61,5 +61,10 @@
     },
     "jest": {
         "preset": "react-native"
+    },
+    "rnpm": {
+        "assets": [
+            "./assets/fonts"
+        ]
     }
 }
