--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-native-crypto": "2.1.2",
         "react-native-device-info": "0.22.4",
         "react-native-firebase": "5.0.0-rc4",
+        "react-native-gesture-handler": "^1.0.9",
         "react-native-interactable": "0.1.10",
         "react-native-markdown-renderer": "3.2.8",
         "react-native-randombytes": "3.5.1",
