--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: "com.google.gms.google-services"
 
 import com.android.build.OutputFile
 
@@ -95,7 +96,6 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "com.kunaticker"
@@ -134,18 +134,22 @@ android {
             }
         }
     }
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
-    compile project(':react-native-randombytes')
-    compile project(':react-native-firebase')
-    compile project(':react-native-svg')
-    compile project(':react-native-interactable')
-    compile project(':react-native-device-info')
-    compile project(':react-native-splash-screen')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-randombytes')
+    implementation project(':react-native-firebase')
+    implementation project(':react-native-svg')
+    implementation project(':react-native-interactable')
+    implementation project(':react-native-device-info')
+    implementation project(':react-native-splash-screen')
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.google.android.gms:play-services-base:16.0.1"
+    implementation "com.google.firebase:firebase-core:16.0.5"
 }
 
 // Run this once to be able to run the application with BUCK
