--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "react-native-super-grid": "2.4.3",
         "react-native-svg": "6.5.2",
         "react-native-svg-icon": "0.8.1",
-        "react-native-tab-view": "1.0.2",
+        "react-native-tab-view": "^1.3.0",
         "react-navigation": "2.12.1",
         "react-redux": "5.0.7",
         "recompose": "0.28.2",
