--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "KunaTicker",
-    "version": "1.0.0",
+    "version": "1.1",
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -11,7 +11,8 @@
         "make-third-party:1": "cd ./node_modules/react-native/scripts && ./ios-install-third-party.sh",
         "make-third-party:2": "cd ./node_modules/react-native/third-party/glog-0.3.4 && ./configure && make && make install",
         "make-third-party": "npm run make-third-party:1 && npm run make-third-party:2",
-        "configure-app": "npm install && react-native link && npm run make-third-party"
+        "configure-app": "npm install && react-native link && npm run make-third-party",
+        "postversion": "react-native-version"
     },
     "dependencies": {
         "axios": "0.18.0",
@@ -55,6 +56,7 @@
         "jest": "23.5.0",
         "metro-react-native-babel-preset": "0.47.0",
         "react-native-typescript-transformer": "1.2.10",
+        "react-native-version": "2.6.6",
         "react-test-renderer": "16.4.1",
         "ts-jest": "23.1.3",
         "typescript": "3.0.1"
