--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "KunaTicker",
-    "version": "1.1",
+    "version": "1.1.7",
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -16,7 +16,7 @@
     },
     "dependencies": {
         "axios": "0.18.0",
-        "kuna-sdk": "0.3.5",
+        "kuna-sdk": "^0.3.6",
         "lodash": "4.17.10",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
