--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-redux": "5.0.7",
         "recompose": "0.28.2",
         "redux": "4.0.0",
+        "sjcl": "1.0.8",
         "vm-browserify": "1.1.0"
     },
     "devDependencies": {
@@ -50,6 +51,7 @@
         "@types/react-redux": "6.0.6",
         "@types/recompose": "0.26.4",
         "@types/redux": "3.6.0",
+        "@types/sjcl": "1.0.28",
         "babel-jest": "23.4.2",
         "babel-plugin-module-alias": "1.6.0",
         "babel-preset-react-native": "5.0.2",
