--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "KunaTicker",
-    "version": "1.1.0",
+    "name": "kuna-ticker",
+    "version": "1.2.0",
     "private": true,
     "scripts": {
         "start": "node node_modules/react-native/local-cli/cli.js start",
