--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-languages')
     compile project(':react-native-svg')
     compile project(':react-native-splash-screen')
     compile project(':react-native-randombytes')
