--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "axios": "0.18.0",
+        "i18n-js": "^3.1.0",
         "kuna-sdk": "0.3.9",
         "lodash": "4.17.10",
         "node-libs-react-native": "1.0.2",
@@ -26,6 +27,7 @@
         "react-native-device-info": "0.22.4",
         "react-native-firebase": "5.0.0-rc4",
         "react-native-interactable": "0.1.10",
+        "react-native-languages": "3.0.1",
         "react-native-markdown-renderer": "3.2.8",
         "react-native-randombytes": "3.5.1",
         "react-native-splash-screen": "3.1.1",
@@ -42,6 +44,7 @@
     },
     "devDependencies": {
         "@types/es6-promise": "3.3.0",
+        "@types/i18n-js": "^3.0.1",
         "@types/lodash": "4.14.116",
         "@types/numeral": "0.0.25",
         "@types/react": "16.4.11",
