--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     },
     "dependencies": {
         "axios": "0.18.0",
-        "kuna-sdk": "0.3.9",
+        "kuna-sdk": "^0.4.0-beta.1",
         "lodash": "4.17.10",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
