--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,10 +3,9 @@ platform :ios, '9.0'
 
 # Required by RNFirebase
 pod 'Firebase/Core', '~> 5.3.0'
+pod 'Firebase/RemoteConfig', '~> 5.3.0'
 
 target 'KunaTicker' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
-  pod 'RNLanguages', :path => '../node_modules/react-native-languages'
-
+  # use_frameworks
 end
