--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "axios": "0.18.0",
+        "bignumber.js": "^8.0.1",
         "i18n-js": "3.1.0",
         "kuna-sdk": "^0.4.0-beta.4",
         "lodash": "4.17.10",
