--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
         "react-native-tab-view": "1.3.0",
         "react-navigation": "2.12.1",
         "react-redux": "5.0.7",
+        "react-router": "^4.3.1",
+        "react-router-native": "^4.3.0",
         "recompose": "0.28.2",
         "redux": "4.0.0",
         "sjcl": "1.0.8",
@@ -53,6 +55,7 @@
         "@types/react-native-tab-view": "1.0.2",
         "@types/react-navigation": "2.0.19",
         "@types/react-redux": "6.0.6",
+        "@types/react-router-native": "^4.2.3",
         "@types/recompose": "0.26.4",
         "@types/redux": "3.6.0",
         "@types/sjcl": "1.0.28",
