--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,13 @@
 {
     "presets": [
         "react-native"
+    ],
+    "plugins": [
+        [
+            "@babel/plugin-proposal-decorators",
+            {
+                "legacy": true
+            }
+        ]
     ]
 }
