--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     },
     "dependencies": {
         "axios": "0.18.0",
-        "bignumber.js": "^8.0.1",
+        "bignumber.js": "8.0.1",
         "i18n-js": "3.1.0",
         "kuna-sdk": "^0.4.0-beta.4",
+        "mobx": "5.8.0",
+        "mobx-react": "5.4.3",
         "lodash": "4.17.10",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
@@ -46,6 +48,7 @@
         "vm-browserify": "1.1.0"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-decorators": "7.2.3",
         "@types/es6-promise": "3.3.0",
         "@types/i18n-js": "3.0.1",
         "@types/lodash": "4.14.116",
