--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
         "bignumber.js": "8.0.1",
         "i18n-js": "3.1.0",
         "kuna-sdk": "^0.4.0-beta.4",
+        "lodash": "4.17.10",
         "mobx": "5.8.0",
         "mobx-react": "5.4.3",
-        "lodash": "4.17.10",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
         "react": "16.4.1",
@@ -40,9 +40,10 @@
         "react-native-tab-view": "1.3.0",
         "react-navigation": "2.12.1",
         "react-redux": "5.0.7",
-        "react-router": "^4.3.1",
-        "react-router-native": "^4.3.0",
+        "react-router": "4.3.1",
+        "react-router-native": "4.3.0",
         "recompose": "0.28.2",
+        "recyclerlistview": "1.3.4",
         "redux": "4.0.0",
         "sjcl": "1.0.8",
         "vm-browserify": "1.1.0"
@@ -58,7 +59,7 @@
         "@types/react-native-tab-view": "1.0.2",
         "@types/react-navigation": "2.0.19",
         "@types/react-redux": "6.0.6",
-        "@types/react-router-native": "^4.2.3",
+        "@types/react-router-native": "4.2.3",
         "@types/recompose": "0.26.4",
         "@types/redux": "3.6.0",
         "@types/sjcl": "1.0.28",
