--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,12 +24,16 @@ allprojects {
         google()
         jcenter()
         maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
         maven {
-            url 'https://maven.google.com/'
-            name 'Google'
+            // ADDED THIS - Local Maven repo containing AARs with JSC library built for Android
+            url "$rootDir/../node_modules/jsc-android/dist"
         }
     }
 }
