--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "babel-plugin-module-alias": "1.6.0",
         "babel-preset-react-native": "5.0.2",
         "jest": "23.5.0",
+        "jsc-android": "236355.1.1",
         "metro-react-native-babel-preset": "0.47.0",
         "react-native-typescript-transformer": "1.2.10",
         "react-native-version": "2.6.6",
