--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -180,6 +180,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-base:16.0.1"
     implementation "com.google.firebase:firebase-core:16.0.6"
     implementation "com.google.firebase:firebase-config:16.1.2"
+    implementation "com.google.firebase:firebase-ads:16.0.1"
 }
 
 // Run this once to be able to run the application with BUCK
