--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,6 +4,7 @@ platform :ios, '9.0'
 # Required by RNFirebase
 pod 'Firebase/Core', '~> 5.3.0'
 pod 'Firebase/RemoteConfig', '~> 5.3.0'
+pod 'Firebase/AdMob', '~> 5.3.0'
 
 target 'KunaTicker' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
