--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "lodash": "4.17.10",
         "mobx": "5.8.0",
         "mobx-react": "5.4.3",
+        "moment": "^2.23.0",
         "node-libs-react-native": "1.0.2",
         "numeral": "2.0.6",
         "react": "16.4.1",
