--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "axios": "0.18.0",
         "bignumber.js": "8.0.1",
+        "formik": "1.4.2",
         "i18n-js": "3.1.0",
         "kuna-sdk": "^0.4.0-beta.4",
         "lodash": "4.17.10",
@@ -48,7 +49,8 @@
         "recyclerlistview": "1.3.4",
         "redux": "4.0.0",
         "sjcl": "1.0.8",
-        "vm-browserify": "1.1.0"
+        "vm-browserify": "1.1.0",
+        "yup": "0.26.7"
     },
     "devDependencies": {
         "@babel/plugin-proposal-decorators": "7.2.3",
@@ -65,6 +67,7 @@
         "@types/recompose": "0.26.4",
         "@types/redux": "3.6.0",
         "@types/sjcl": "1.0.28",
+        "@types/yup": "0.26.4",
         "babel-jest": "23.4.2",
         "babel-plugin-module-alias": "1.6.0",
         "babel-preset-react-native": "5.0.2",
