--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,9 +2,13 @@
 platform :ios, '9.0'
 
 # Required by RNFirebase
-pod 'Firebase/Core', '~> 5.3.0'
-pod 'Firebase/RemoteConfig', '~> 5.3.0'
-pod 'Firebase/AdMob', '~> 5.3.0'
+pod 'Fabric', '~> 1.7.13'
+pod 'Crashlytics', '~> 3.10.7'
+pod 'Firebase/Core', '~> 5.15.0'
+pod 'Firebase/Messaging', '~> 5.15.0'
+pod 'Firebase/Performance', '~> 5.15.0'
+pod 'Firebase/RemoteConfig', '~> 5.15.0'
+pod 'Firebase/AdMob', '~> 5.15.0'
 
 target 'KunaTicker' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
