--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -158,6 +158,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-directed-scrollview')
     compile project(':react-native-gesture-handler')
     compile project(':react-native-languages')
     compile project(':react-native-svg')
