--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,8 @@ pod 'Firebase/AdMob', '~> 5.15.0'
 target 'KunaTicker' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks
+  pod 'react-native-directed-scrollview', :path => '../node_modules/react-native-directed-scrollview'
+
 end
 
 post_install do |installer|
