--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,11 +4,12 @@ platform :ios, '9.0'
 # Required by RNFirebase
 pod 'Fabric', '~> 1.7.13'
 pod 'Crashlytics', '~> 3.10.7'
-pod 'Firebase/Core', '~> 5.15.0'
-pod 'Firebase/Messaging', '~> 5.15.0'
-pod 'Firebase/Performance', '~> 5.15.0'
-pod 'Firebase/RemoteConfig', '~> 5.15.0'
-pod 'Firebase/AdMob', '~> 5.15.0'
+pod 'Firebase/Core', '~> 5.19.0'
+pod 'Firebase/Messaging', '~> 5.19.0'
+pod 'Firebase/Performance', '~> 5.19.0'
+pod 'Firebase/DynamicLinks', '~> 5.19.0'
+pod 'Firebase/RemoteConfig', '~> 5.19.0'
+pod 'Firebase/AdMob', '~> 5.19.0'
 
 target 'KunaTicker' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
